# quote-validator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  improvement.md  main.py  pyproject.toml  pytest.ini  test_main.http
alembic/: env.py
alembic/versions/: 771e7406ebab_initial.py
api/: routes.py
domain/: models.py  schemas.py  services.py
infrastructure/: db.py  messaging.py  models.py
templates/: validate_quote.html
tests/: conftest.py  test_api.py  test_domain.py
tests/integration/: test_quote_api.py
tests/unit/: test_api.py  test_domain.py
